# receipt-reader

./: .gitignore  LICENSE  README.md  parse_all.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pylint.yml
GCloud/: gcloud_data_migration.py  gcloud_parser.py  gcloud_run.py  gcloud_sheet_connect_test_step_two.py  gcloud_test.py  gcloud_test_step_one.py  parse_all.py  parse_json.py
Tesseract/tesseract_parser/: pytesseract_test.py  tesseract_extract.py
TestThisFirst/: gcloud_sheet_connect_test_step_two.py  gcloud_test_step_one.py
