[tool.poetry]
name = "receipt-reader"
version = "0.2.0"
description = "Read Sainsbury's receipts and upload them to Google Sheets"
authors = ["Alexandra Whitham"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.4"
configparser = "^7.2.0"
argparse = "^1.4.0"
pdf2image = "^1.17.0"
google-cloud-vision = "^3.10.1"
google-api-python-client = "^2.167.0"
google-auth-oauthlib = "^1.2.1"

[tool.poetry.dev-dependencies]
black = "^25.1.0"
isort = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
